--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Pantalla Virtual</string>
+    <string name="app_name">Screens</string>
     <string name="message_write_progress">Writing to Tag..</string>
     <string name="message_tag_detected">¡Tag NFC detectado!</string>
-    <string name="message_read_tag">Acerca el teléfono al tag NFC</string>
+    <string name="message_read_tag">ESCANEAR TAG</string>
     <string name="message_write_tag">Write to NFC Tag</string>
     <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
     <string name="hint_message">Message</string>
